--- a/index.html
+++ b/index.html
@@ -76,7 +76,23 @@ $('#divideButton').click(function(){
 })
 </script>
 
-
+<h2>Basic subtraction</h2>
+<input value="1" id="add1">
+minus
+<input value="2" id="subtract2">
+<input type="button" value="equals" id="addButton">
+<span id="subtractResult"></span>
+<script>
+$('#subtractButton').click(function(){
+  // Get numbers from the two boxes.
+  var subtract1 = Number($('#subtract1').val());
+  var subtract2 = Number($('#subtract2').val());
+  // subtract the two numbers together and store them as result.
+  var result = subtract1 + subtract2;
+  // Show the result.
+  $('#subtractResult').text(result)
+})
+</script>
 <h2>Subtraction (Make this one by copying the addition code)</h2>
 Select and Copy the addition code (ctrl+c) and paste it here (ctrl+v).
 Go through and change add to subtract everywhere. Also, change the plus sign to a minus sign.
