--- a/index.html
+++ b/index.html
@@ -77,10 +77,10 @@ $('#divideButton').click(function(){
 </script>
 
 <h2>Basic subtraction</h2>
-<input value="1" id="add1">
+<input value="1" id="subtract1">
 minus
 <input value="2" id="subtract2">
-<input type="button" value="equals" id="addButton">
+<input type="button" value="equals" id="subtractButton">
 <span id="subtractResult"></span>
 <script>
 $('#subtractButton').click(function(){
@@ -88,7 +88,7 @@ $('#subtractButton').click(function(){
   var subtract1 = Number($('#subtract1').val());
   var subtract2 = Number($('#subtract2').val());
   // subtract the two numbers together and store them as result.
-  var result = subtract1 + subtract2;
+  var result = subtract1 - subtract2;
   // Show the result.
   $('#subtractResult').text(result)
 })
