--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@ Get a random number between 1 and
 <script>
 // Can you figure out how to do this one?
 </script>
-
+// my number is "randomResult3"
 
 <h2>Number guessing game (Finish this one yourself.)</h2>
 I'm thinking of a number between 1 and 10. What do you think it is?
@@ -242,7 +242,7 @@ I'm thinking of a number between 1 and 10. What do you think it is?
 <input id="guessButton" type="button" value="guess">
 <span id="guessAnswer"></span>
 <script>
-  2
+  // my number is "guessAnswer"
   
 </script>
 
