--- a/index.html
+++ b/index.html
@@ -229,16 +229,20 @@ $('#randomButton2').click(function(){
 
 <h2>Even bigger Random Numbers (Finish this one yourself.)</h2>
 Get a random number between 1 and
+<input type="button" id="randomButton2" value="Get a random number between 1 and 10"> <span id="randomResult2"></span>
+<script>
 <input id="howBig" value="20">
 <input type="button" id="randomButton3" value="Go"> <span id="randomResult3"></span>
 <script>
 // Can you figure out how to do this one?
 </script>
-// my number is "randomResult3"
+
 
 <h2>Number guessing game (Finish this one yourself.)</h2>
 I'm thinking of a number between 1 and 10. What do you think it is?
 <input id="guessBox">
+<input type="button" id="randomButton2" value="Get a random number between 1 and 10"> <span id="randomResult2"></span>
+<script>
 <input id="guessButton" type="button" value="guess">
 <span id="guessAnswer"></span>
 <script>
