--- a/index.html
+++ b/index.html
@@ -229,12 +229,15 @@ $('#randomButton2').click(function(){
 
 <h2>Even bigger Random Numbers (Finish this one yourself.)</h2>
 Get a random number between 1 and
-<input type="button" id="randomButton2" value="Get a random number between 1 and 10"> <span id="randomResult2"></span>
-<script>
+
 <input id="howBig" value="20">
-<input type="button" id="randomButton3" value="Go"> <span id="randomResult3"></span>
+<input type="button" id="randomButton3" value="Get a random number between 1 and 20"> <span id="randomResult3"></span>
 <script>
-// Can you figure out how to do this one?
+$('#randomButton3').click(function(){
+  var result = Math.random()
+  result = Math.ceil(result * 20)
+  $('#randomResult3').text(result)
+})
 </script>
 
 
