--- a/index.html
+++ b/index.html
@@ -233,7 +233,9 @@ Get a random number between 1 and
 <input id="howBig" value="20">
 <input type="button" id="randomButton3" value="Get a random number between 1 and 20"> <span id="randomResult3"></span>
 <script>
+
 $('#randomButton3').click(function(){
+ $('#whichBiggerButton').click(function(){
   var result = Math.random()
   result = Math.ceil(result * 20)
   $('#randomResult3').text(result)
